# traction-backend

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yaml
backend/alembic/versions/: 2026-02-25-20-02_1230fe16436b.py  2026-02-25-20-12_8ae78d53734b.py  2026-02-26-04-05_b6819a4225d9.py  2026-02-26-05-39_508dad92cf10.py  2026-02-26-06-04_26d6f34304be.py  2026-02-26-06-13_0d3e5c56cde0.py  2026-02-26-06-18_3c8ab4c93fd2.py  2026-02-26-07-00_a1b2c3d4e5f6.py  2026-02-26-09-30_b2c3d4e5f6a7.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/routers/: auth.py  chat.py  documents.py  pages.py  projects.py  public.py  share.py  users.py
backend/app/controllers/: auth_controller.py  chat_controller.py  generation_controller.py  pages_controller.py  project_controller.py  share_controller.py
backend/app/core/: ai_generators.py  config.py  deck_template.py  security.py
backend/app/core/demo_decks/: aurora.html  ember.html  frost.html  mono.html  neon.html
backend/app/models/: __init__.py  base.py  chat.py  chat_message.py  oauth_account.py  project.py  refresh_token.py  user.py
backend/app/routers/: auth.py  users.py
backend/app/schemas/: auth.py  chat.py  deck_content.py  extraction.py  generation.py  pages.py  project.py  user.py
