[project]
name = "traction-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.133.0",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlmodel>=0.0.37",
    "asyncpg>=0.31.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.11.0",
    "jinja2>=3.1.6",
    "authlib>=1.6.8",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "uvicorn[standard]>=0.34.0",
    "itsdangerous>=2.2.0",
]
